RESOLVED FIXED301894
imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=301894
Summary imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/naviga...
Chris Dumez
Reported 2025-11-03 18:18:21 PST
imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document.html is a flaky crash in debug: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x300002858 WTFCrashWithInfo(int, char const*, char const*, int) + 100 1 WebCore 0x304a1fd4c WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const + 700 2 WebCore 0x304a1f0c0 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) + 236 3 WebCore 0x305a18114 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener>>, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) + 1392 4 WebCore 0x305a0a148 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) + 472 5 WebCore 0x305a17a30 WebCore::EventTarget::dispatchEvent(WebCore::Event&) + 440 6 WebCore 0x30577a0f4 WebCore::AbortSignal::runAbortSteps() + 392 7 WebCore 0x305778d3c WebCore::AbortSignal::signalAbort(JSC::JSValue) + 644 8 WebCore 0x306c08be4 WebCore::Navigation::abortOngoingNavigation(WebCore::NavigateEvent&) + 740 9 WebCore 0x306c0a33c WebCore::Navigation::abortOngoingNavigationIfNeeded() + 80 10 WebCore 0x306c09338 WebCore::Navigation::innerDispatchNavigateEvent(WebCore::NavigationNavigationType, WTF::Ref<WebCore::NavigationDestination, WTF::RawPtrTraits<WebCore::NavigationDestination>, WTF::DefaultRefDerefTraits<WebCore::NavigationDestination>>&&, WTF::String const&, WebCore::FormState*, WebCore::SerializedScriptValue*, WebCore::Element*) + 516 11 WebCore 0x306c0b0dc WebCore::Navigation::dispatchPushReplaceReloadNavigateEvent(WTF::URL const&, WebCore::NavigationNavigationType, bool, WebCore::FormState*, WebCore::SerializedScriptValue*, WebCore::Element*) + 228 12 WebCore 0x306820a4c WebCore::FrameLoader::dispatchNavigateEvent(WebCore::FrameLoadType, WebCore::FrameLoadRequest const&, bool, WebCore::FormState*, WebCore::Event*, WebCore::SerializedScriptValue*) + 780 13 WebCore 0x30681cbe0 WebCore::FrameLoader::loadURL(WebCore::FrameLoadRequest&&, WTF::String const&, WebCore::FrameLoadType, WebCore::Event*, WTF::RefPtr<WebCore::FormState, WTF::RawPtrTraits<WebCore::FormState>, WTF::DefaultRefDerefTraits<WebCore::FormState>>&&, std::__1::optional<WebCore::PrivateClickMeasurement>&&, WTF::CompletionHandler<void ()>&&) + 3972 ```
Attachments
Chris Dumez
Comment 1 2025-11-03 20:37:57 PST
EWS
Comment 2 2025-11-04 03:19:55 PST
Committed 302530@main (86a2114b3e46): <https://commits.webkit.org/302530@main> Reviewed commits have been landed. Closing PR #53372 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-04 03:20:12 PST
Note You need to log in before you can comment on or make changes to this bug.